--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/guyfoz77/weather-app#readme",
   "dependencies": {
+    "date-fns": "^2.30.0",
     "webpack": "^5.88.2"
   },
   "devDependencies": {
